kube_study/ingress_project/ygw-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ygw-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      app: ygw-app
  template:
    metadata:
      labels:
        app: ygw-app
    spec:
      containers:
      - name: nginx
        image: nginx:latest
        ports:
        - containerPort: 80
        command: ["sh", "-c"]
        args: ["echo 'HELLO KEA-$INITIALS' > /usr/share/nginx/html/index.html && exec nginx -g 'daemon off;'"]
