kube_study/ingress_project/ygw-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ygw-service
spec:
  selector:
    app: ygw-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
